--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,13 @@ body {
     min-width: 300px;
 }
 
+.logo-text {
+    display: block;
+    flex-shrink: 0;
+    min-width: 300px;
+    margin-right: 40px;
+}
+
 .logo-img {
     width: 70px;
     height: 70px;
